--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "unirest": "^0.5.1"
   },
   "devDependencies": {
-    "nock": "^9.0.13"
+    "nock": "^9.0.13",
+    "async": "~0.9.0"
   }
 }
